Initial commit of actual content
Whee static pages!  This is basically complete.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,37 @@
-<body>
-    <h1>
-        Hello, world!
-    </h1>
-</body>
+<!DOCTYPE html>
+<html lang="en_us">
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Barag.org: A bunch of people</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <span class="name ba">ba</span><span class="name rag">rag</span>
+        <div class="pronunciation">
+          "<img src="goat.png" alt="baa" title="baa"/>&ndash;<img src="oil-rig.svg" alt="rig" title="rig"/>"
+        </div>
+      </div>
+      <aside>
+        A bunch of people with the same last name.
+      </aside>
+    </header>
+    <p>
+      You're probably looking for <a href="http://sean.barag.org">Sean Barag</a>, a programmer.  If not, here's some other things that might be close:
+      <ul>
+        <li>
+          A trio of <a href="https://en.wikipedia.org/wiki/Old_Barag_Banner">Inner</a> <a href="https://en.wikipedia.org/wiki/New_Barag_Left_Banner">Mongolian</a> <a href="https://en.wikipedia.org/wiki/New_Barag_Right_Banner">subdivisions</a> called "banners"
+        </li>
+        <li>
+          A <a href="http://starwars.wikia.com/wiki/Old_Barag">planet</a> and <a href="http://starwars.wikia.com/wiki/Old_Barag">star system</a> in the expanded Star Wars universe
+        </li>
+        <li>
+          The correct spelling of <a href="http://www.dictionary.com/browse/barrage">a word</a> referring to "a heavy barrier of artillery fire"
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Balrog">Creatures</a> who appear in J. R. R. Tolkien's Middle-earth legendarium
+        </li>
+      </ul>
+    </p>
+  </body>
+</html>
