Use all-caps "BAA" alt-text
It emulates the pronunciation better.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div>
         <span class="name ba">ba</span><span class="name rag">rag</span>
         <div class="pronunciation">
-          "<img src="goat.png" alt="baa" title="baa"/>&ndash;<img src="oil-rig.svg" alt="rig" title="rig"/>"
+          "<img src="goat.png" alt="BAA" title="BAA"/>&ndash;<img src="oil-rig.svg" alt="rig" title="rig"/>"
         </div>
       </div>
       <aside>
