Remove ".org" from page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en_us">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title>Barag.org: A bunch of people</title>
+    <title>Barag: A bunch of people</title>
   </head>
   <body>
     <header>
