Use wiktionary instead of dictionary.com for barrage definition

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           A <a href="http://starwars.wikia.com/wiki/Old_Barag">planet</a> and <a href="http://starwars.wikia.com/wiki/Old_Barag">star system</a> in the expanded Star Wars universe
         </li>
         <li>
-          The correct spelling of <a href="http://www.dictionary.com/browse/barrage">a word</a> referring to "a heavy barrier of artillery fire"
+          The correct spelling of <a href="https://en.wiktionary.org/wiki/barrage">a word</a> referring to "a heavy curtain of artillery fire"
         </li>
         <li>
           <a href="https://en.wikipedia.org/wiki/Balrog">Creatures</a> who appear in J. R. R. Tolkien's Middle-earth legendarium
