Remove images in place of text
The images didn't really "read" -- the pronunciation wasn't clear.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <header>
       <div>
-        <span class="name ba">ba</span><span class="name rag">rag</span>
+        <span class="name ba" title='"baa"'>ba</span><span class="name rag" title='"rig"'>rag</span>
         <div class="pronunciation">
-          "<img src="goat.png" alt="BAA" title="BAA"/>&ndash;<img src="oil-rig.svg" alt="rig" title="rig"/>"
+            "<span class="ba">BAA</span>-<span class="rag">rig</span>"
         </div>
       </div>
       <aside>
